discretization/Reservoir/analisys_1.log
  File "evaluate_reservoir.py", line 306
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
